Ensure that box-whisker sortable items are not too wide
Reviewers: eater

Reviewed By: eater

Differential Revision: http://phabricator.khanacademy.org/D12615

--- a/css/khan-exercise.css
+++ b/css/khan-exercise.css
@@ -845,6 +845,7 @@ html.exercise-browser {
 
 .box-whisker-sortable > .sortable > ul > li {
     width: 28px;
+    min-width: 28px;
     height: 28px;
     margin-right: 2px;
     font-size: 1em;
